# BI-OSY

Project1/: CMakeLists.txt  Zadani.txt  sample_tester.cpp  sample_tester.h  solution.cpp
Project2/: Zadani.txt  ccpu.cpp  solution.cpp  test1.cpp  test2.cpp  test4.cpp  test_op.cpp
